changed paragraph rendering to use paragraph tags instead of text and <br>, which resolves a number of spacing issues

--- a/style/main.css
+++ b/style/main.css
@@ -14,6 +14,19 @@
     transform: translate(-50%, -50%);
 }
 
+[data-ui="text"] p {
+    margin: 1em 0;
+    line-height: 1.4em;
+}
+
+[data-ui="text"] p:first-child {
+	margin: 0 0 1em;
+}
+
+[data-ui="text"] p:last-child {
+	margin: 1em 0 0;
+}
+
 section>div:not(.row)[data-ui="text"] {
     width: 80vw;
 }
